# Silent-Face-Anti-Spoofing-APK

./: build.gradle  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mv/livebodyexample/: CoverView.kt  EngineWrapper.kt  MainActivity.kt  RectView.kt
engine/: build.gradle
engine/src/main/cpp/: CMakeLists.txt  face_detector.cpp  face_detector.h  face_detector_jni.cpp  live.cpp  live.h  live_jni.cpp
engine/src/main/java/com/mv/engine/: Component.kt
gradle/wrapper/: gradle-wrapper.properties
